changed winbigrf back to bigrf to see if that caused a bug

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: winbigrf
+Package: bigrf
 Version: 0.1
 Date: 2015-02-17
 Title: Big Random Forests: Classification and Regression Forests for Large Data Sets
